<?xml version="1.0"?>
<package format="2">
  <name>moveit_memory_bug</name>
  <version>0.0.1</version>
  <description>Minimal example of bug in MoveIt</description>

  <maintainer email="tyler@picknik.ai">Tyler Weaver</maintainer>
  <author email="tyler@picknik.ai">Tyler Weaver</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>moveit_ros_planning_interface</depend>
  <depend>roscpp</depend>

  <depend version_eq="3.9">clang-format</depend>

  <test_depend>rostest</test_depend>
  <test_depend>panda_moveit_config</test_depend>

  <export>
  </export>
</package>
